--- a/site/snapshots/latest/salt/components/button/accessibility.mdx
+++ b/site/snapshots/latest/salt/components/button/accessibility.mdx
@@ -4,12 +4,12 @@ layout: DetailComponent
 sidebar:
   label: Accessibility
 data:
-  descriptionRef: >-
+  description: >-
     Button is an interactive component that allows the user to execute an
     action. There are three Button variants—CTA (call to action), primary and
     secondary—that you can display with or without a label or icon, and in
     various states.
-lastModified: 1681920447574
+lastModified: 1682352425601
 fullPath: /salt/components/button/accessibility.mdx
 route: /salt/components/button/accessibility
 readingTime:
