--- a/site/snapshots/latest/salt/components/button/examples.mdx
+++ b/site/snapshots/latest/salt/components/button/examples.mdx
@@ -4,23 +4,20 @@ layout: DetailComponent
 sidebar:
   label: Examples
 data:
-  descriptionRef: >-
+  description: >-
     Button is an interactive component that allows the user to execute an
     action. There are three Button variants—CTA (call to action), primary and
     secondary—that you can display with or without a label or icon, and in
     various states.
-lastModified: 1681920447575
+lastModified: 1682512369432
 fullPath: /salt/components/button/examples.mdx
 route: /salt/components/button/examples
 readingTime:
-  text: 1 min read
-  minutes: 0.28
-  time: 16800
-  words: 56
-tableOfContents:
-  - level: 3
-    id: cta-call-to-action
-    text: CTA (call to action)
+  text: 0 min read
+  minutes: 0
+  time: 0
+  words: 0
+tableOfContents: []
 navigation:
   prev:
     title: Button
@@ -66,12 +63,4 @@ sidebarData:
             childNodes: []
 ---
 
-### CTA (call to action)
-
-Use the CTA button for high priority actions.
-
-#### Guidance
-
-- Choose a CTA button when an action is more urgent than other visible buttons.
-- Use it for important or irreversible actions, such as agreeing to terms and conditions or deleting a profile.
-- Only display one CTA button per screen to emphasize the next action the user should take.
+<LivePreview componentName="button" />
