--- a/site/snapshots/latest/salt/components/button/usage.mdx
+++ b/site/snapshots/latest/salt/components/button/usage.mdx
@@ -4,12 +4,12 @@ layout: DetailComponent
 sidebar:
   label: How to use
 data:
-  descriptionRef: >-
+  description: >-
     Button is an interactive component that allows the user to execute an
     action. There are three Button variants—CTA (call to action), primary and
     secondary—that you can display with or without a label or icon, and in
     various states.
-lastModified: 1681920447579
+lastModified: 1682352452408
 fullPath: /salt/components/button/usage.mdx
 route: /salt/components/button/usage
 readingTime:
