--- a/packages/lab/stories/toggle-button/toggle-button.doc.stories.mdx
+++ b/packages/lab/stories/toggle-button/toggle-button.doc.stories.mdx
@@ -1,4 +1,4 @@
-import { ComponentsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
+import { Canvas, Meta, Story, ArgsTable } from "@storybook/addon-docs";
 import { ToggleButton, ToggleButtonGroup } from "@salt-ds/lab";
 import HelpAndSupport from "docs/blocks/help-and-support.doc.mdx";
 
@@ -14,33 +14,19 @@ import HelpAndSupport from "docs/blocks/help-and-support.doc.mdx";
 # Toggle Button
 
 <Canvas>
-  <Story id="lab-toggle-button--single" />
+  <Story id="lab-toggle-button--text-and-icon" />
 </Canvas>
 
 This basic component allows users to enable or disable a single command.
-
-- If you're presenting a binary choice between two alternatives, consider a Switch. This choice is especially relevant if the execution is instantaneous and isn't required to be submitted first.
-- If the option is likely to change depending on context (for example, user filter selection), use a selectable Pill instead.
-
-# Toggle Button Group
-
-<Canvas>
-  <Story id="lab-toggle-button--horizontal" />
-</Canvas>
-
-The Toggle Button Group allows users to make a mutually exclusive selection from a set of related commands—with only one option selected at a time.
-
-## Examples
 
 ### Text and Icon
 
 Use icons and text in Toggle Buttons if it's important to visually reinforce the theme of the options or if providing additional context may help decision-making (for examples, selecting a document type or a text style).
 
 - Pass `aria-hidden=”true”` to the icon so its label is not announced by the screen reader.
-- To reduce visual noise and mitigate alignment issues, use icons in Toggle Button labels consistently across all options in the group.
 
 <Canvas>
-  <Story id="lab-toggle-button--horizontal" />
+  <Story id="lab-toggle-button--text-and-icon" />
 </Canvas>
 
 ### Icon only
@@ -51,7 +37,7 @@ The Toggle Button Group can be used with icons only.
 - A `Tooltip` should be used to provide additional context for each `ToggleButton`.
 
 <Canvas>
-  <Story id="lab-toggle-button--horizontal-icon-only" />
+  <Story id="lab-toggle-button--icon-only" />
 </Canvas>
 
 ### Text only
@@ -59,7 +45,7 @@ The Toggle Button Group can be used with icons only.
 You can configure the Toggle Buttons to display text only when you can't identify a suitable or intuitive icon.
 
 <Canvas>
-  <Story id="lab-toggle-button--horizontal-text-only" />
+  <Story id="lab-toggle-button--text-only" />
 </Canvas>
 
 ### Disabled
@@ -70,59 +56,33 @@ Disable the entire group, if required by context or users permissions.
   <Story id="lab-toggle-button--disabled" />
 </Canvas>
 
-### Orientation
-
-The Toggle Button Group can be vertically orientated using the `orientation` prop, if the options are better presented in a stacked layout.
-
-<Canvas>
-  <Story id="lab-toggle-button--vertical" />
-</Canvas>
-
-<Canvas>
-  <Story id="lab-toggle-button--vertical-icon-only" />
-</Canvas>
-
-<Canvas>
-  <Story id="lab-toggle-button--vertical-text-only" />
-</Canvas>
-
 ## How to use
 
-### When to use Toggle Button Group
+### When not to use Toggle Button
 
-- Use the Toggle Button to present users with a mutually exclusive selection within a Toggle Button Group - users can select only one option.
-- When displaying two or more options, which are related by function or context (for example, text alignment—left, center, right; speed selection—slow, medium, fast).
+- If you're presenting a binary choice between two alternatives, consider a Switch. This choice is especially relevant if the execution is instantaneous and isn't required to be submitted first.
+- If the option is likely to change depending on context (for example, user filter selection), use a selectable Pill instead.
 
-### When not to use Toggle Button Group
-
-- If the options in the group are not deemed high priority and high emphasis is not required, consider using a [Radio Button Group](/components/radio-button-group).
-- If all options in the group don't need to be visible at once, consider using a Dropdown component for making selections.
-- If you present options in a Toggle Button Group within a compact UI, or they're subject to change depending on context, consider using a Selectable Pill instead.
-
-## Configuring Toggle Button Group
+## Configuring Toggle Button
 
 ### API
 
 ```jsx
-import { ToggleButtonGroup, ToggleButton } from "@salt-ds/lab";
+import { ToggleButton } from "@salt-ds/lab";
 ```
 
 ### Props
 
-<ComponentsTable components={{ ToggleButtonGroup, ToggleButton }} />
+<ArgsTable of={ToggleButton} />
 
 ## Accessibility
 
-The Toggle Button Group is accessible by screen readers and provides full WAI-ARIA Radio Group support.
+The Toggle Button is accessible by screen readers and provides full WAI-ARIA Checkbox support.
 
 ### Keyboard interactions
 
-| Key                                           | Function                                                                                                                                                                                                                                                      |
-| --------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| <kbd>Tab</kbd>                                | Moves focus into the Toggle Button Group. Focus is set to the active button. If focus is inside the Toggle Button Group, moves focus out of the Toggle Button Group. Focus is set to the next component in the tab order.                                     |
-| <kbd>Shift</kbd> and <kbd>Tab</kbd>           | If focus is inside the Toggle Button Group, moves focus out of the component. Focus is set to the previous component in the tab order. If focus is below the Toggle Button Group, move focus into the Toggle Button Group. Focus is set to the active button. |
-| <kbd>ArrowRight</kbd> or <kbd>ArrowDown</kbd> | Moves focus to the next Toggle Button in the Toggle Button Group. If focus is on the last Toggle Button, wrap focus to the first Toggle Button.                                                                                                               |
-| <kbd>ArrowLeft</kbd> or <kbd>ArrowUp</kbd>    | Moves focus to the previous Toggle Button in the Toggle Button Group. If focus is on the first Toggle Button, wrap focus to the last Toggle Button.                                                                                                           |
-| <kbd>Enter</kbd> or <kbd>Space</kbd>          | When focus is on an available button in the Toggle Button Group, activates the button. Focus remains on the selected button. If focus is on the active button, does nothing.                                                                                  |
+| Key                                  | Function                                                                                                                                            |
+| ------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------- |
+| <kbd>Enter</kbd> or <kbd>Space</kbd> | When focus is on the Toggle Button and the button is inactive, activates the button. If focus is on an active button, it makes the button inactive. |
 
 <HelpAndSupport />
