--- a/site/docs/components/button/usage.mdx
+++ b/site/docs/components/button/usage.mdx
@@ -40,8 +40,4 @@ import { Button } from "@salt-ds/core";
 
 ### Props
 
-| Name                  | Type      | Description                                                                                          | Default   |
-| --------------------- | --------- | ---------------------------------------------------------------------------------------------------- | --------- |
-| disabled              | `boolean` | If `true``, the button will be disabled.                                                             | -         |
-| focusableWhenDisabled | `boolean` | If `true``, the button will be fosusable when disabled.                                              | -         |
-| variant               | -         | The variant to use. “Primary” is the default value, and the other options are “secondary” and “cta.” | "primary" |
+:propsTable{src="../../packages/core/src/button/Button.tsx"}
