hide table of contents when a single example is displayed

--- a/site/docs/getting-started/designing.mdx
+++ b/site/docs/getting-started/designing.mdx
@@ -182,6 +182,6 @@ The default icon set is 12px for both high and medium density, 14px for low dens
 <Callout title="Need support?">
 
 For help when manually installing Figma, visit the [Figma support page](https://help.figma.com/hc/en-us/articles/360041057214-Get-help-from-the-Figma-Support-team).
-If you have any questions about Salt’s libraries, please [contact us](./support-and-contributions/).
+If you have any questions about Salt’s libraries, please [contact us](../support-and-contributions/).
 
 </Callout>
