--- a/site/docs/getting-started/roadmap.mdx
+++ b/site/docs/getting-started/roadmap.mdx
@@ -52,7 +52,7 @@ We're also more deliberately working to deliver components to support implementa
 
 #### Low confidence
 
-- [Accordion](https://github.com/jpmorganchase/salt-ds/issues/1046)
+- [AccordionGroup](https://github.com/jpmorganchase/salt-ds/issues/1046)
 - [Badge](https://github.com/jpmorganchase/salt-ds/issues/1056)
 - [Pill](https://github.com/jpmorganchase/salt-ds/issues/488)
 - [Progress](https://github.com/jpmorganchase/salt-ds/issues/394)
